# workshop-estruturando-um-projeto-de-dados

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
tests/: tests_pipeline.py
