[tool.poetry]
name = "estruturandoumprojetodozero"
version = "0.1.0"
description = "Workshop Estruturando um projeto de dados do zero"
authors = ["Daniel L. Alves <daniel.leonssio@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
pytest = "^7.4.2"
openpyxl = "^3.1.2"
isort = "^5.12.0"
blue = "^0.9.1"
mkdocs = "^1.5.3"
taskipy = "^1.12.0"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest tests/tests_pipeline.py"
run = "python app/main.py"
kill = "kill -9 $(lsof -t -i :8000)"